--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -10,16 +10,13 @@ $fontFamily: 'Roboto Flex';
 $fontSize: rem(16); // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
-$mainColor: #1f1f1f; // Цвет шрифта по умолчанию
+$mainColor: #1f1f1f;
 $blackColor: #000000;
-// $greenColor: #22b14c;
 $greyColor: #828282;
 $whiteColor: #ffffff;
 // $blueColor: #2b74b9;
 $redColor: #f01b0d;
 $redBgColor: rgba(192, 22, 10);
-// $orangeColor: #fe9f15;
-// $bgColor: #f5f5f5;
 
 // НАСТРОЙКИ ===============================================================================================================================================================================================================================================================================================
 // Минимальная ширина страницы
@@ -162,9 +159,6 @@ body {
 		// position: relative;
 		// height: 100%;
 		z-index: 2;
-		// @media (max-width: $tablet) {
-		// 	padding-bottom: rem(100);
-		// }
 		@media (max-width: $mobile) {
 			justify-content: center;
 		}
@@ -292,14 +286,7 @@ body {
 				position: relative;
 				padding-bottom: 100%;
 			}
-			// padding-bottom: percent(580, 650);
-			// @media (max-width: $pc) {
-			// 	padding-bottom: 100%;
-			// }
 		}
-		// &::before {
-		// 	content: '';
-		// }
 		&::before {
 			content: '';
 			position: absolute;
@@ -315,14 +302,6 @@ body {
 		&:hover {
 			&::before {
 				content: '';
-				// position: absolute;
-				// top: 0;
-				// left: 0;
-				// width: 100%;
-				// height: 100%;
-				// background-color: rgba(0, 0, 0, 0.3);
-				// transition: all 0.3s ease 0s;
-				// z-index: 1;
 				opacity: 1;
 			}
 		}
@@ -572,21 +551,6 @@ body {
 		min-width: rem(200);
 		& input {
 			@include input;
-			// width: 100%;
-			// display: block;
-			// padding-bottom: rem(10);
-			// font-weight: 300;
-			// font-size: rem(14);
-			// line-height: math.div(17, 14);
-			// color: $whiteColor;
-			// letter-spacing: 2%;
-			// background-color: transparent;
-			// border-bottom: 1px solid rgba($whiteColor, 0.3);
-			// &::placeholder {
-			// 	font-size: rem(14);
-			// 	font-weight: 300;
-			// 	color: $whiteColor;
-			// }
 		}
 		@media (max-width: $tablet) {
 			flex: none;
@@ -594,14 +558,6 @@ body {
 	}
 	// .subscription-contacts__button
 	&__button {
-		// font-size: rem(12);
-		// font-weight: 500;
-		// letter-spacing: 5%;
-		// text-transform: uppercase;
-		// background-color: $redColor;
-		// color: $whiteColor;
-		// padding: rem(12) rem(52);
-		// border-radius: 100px;
 		@include button($redColor, $whiteColor);
 		@include hoverOpacity;
 	}
@@ -612,9 +568,6 @@ body {
 	cursor: grab;
 	&::-webkit-scrollbar {
 		display: none;
-		// height: rem(2);
-		// margin-bottom: rem(-20);
-		// width: rem(10);
 	}
 	&::-webkit-scrollbar-track {
 		background-color: transparent;
@@ -631,17 +584,6 @@ body {
 			width: rem(8);
 		}
 	}
-	// &::-webkit-scrollbar {
-	// 	height: rem(3px);
-	// }
-	// &::-webkit-scrollbar-track {
-	// 	background: transparent;
-	// }
-	// &::-webkit-scrollbar-thumb {
-	// 	background-color: $redColor;
-	// 	border-radius: 5px;
-	// 	cursor: pointer;
-	// }
 }
 
 @import 'header';
